--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="projetos-grid">
         <div class="projeto-card">
           <h3>Projeto 1</h3>
-          <p>Este projeto foi um design para um site informativo sobre queimadas.</p>
-          <p><a href="https://arthurmonsores13.github.io/Prova-P1-Web-SItes/" target="_blank">Clique aqui para mais detalhes!</a></p>
+          <p>Este projeto foi um design para um site informativo sobre meu anime favorito "Solo Leveling"</p>
+          <p><a href="https://arthurmonsores13.github.io/SoloLeveling/" target="_blank">Clique aqui para mais detalhes!</a></p>
         </div>
         <div class="projeto-card">
           <h3>Projeto 2</h3>
