--- a/index.html
+++ b/index.html
@@ -1,70 +1,114 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio</title>
-  <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfólio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h1>Meu Portfólio</h1>
+        <ul>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#projetos">Projetos</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <header>
-    <nav>
-      <h1>Meu Portfólio</h1>
-      <ul>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#projetos">Projetos</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+    <section id="sobre" class="section">
+      <div class="container">
+        <p>Sobre Mim</p>
+        <p>
+          Olá! Sou Arthur Monsores, desenvolvedor web começando na área agora.
+          Bem-vindo ao meu portfólio!
+        </p>
+      </div>
+    </section>
 
-  <section id="sobre" class="section">
-    <div class="container">
-      <h2>Sobre Mim</h2>
-      <p>Olá! Sou Arthur Monsores, desenvolvedor web começando na área agora. Bem-vindo ao meu portfólio!</p>
-    </div>
-  </section>
-
-  <section id="projetos" class="section">
-    <div class="container">
-      <h2>Meus Projetos</h2>
-      <div class="projetos-grid">
-        <div class="projeto-card">
-          <h3>Projeto 1</h3>
-          <p>Este projeto foi um design para um site informativo sobre meu anime favorito "Solo Leveling"</p>
-          <p><a href="https://arthurmonsores13.github.io/SoloLeveling/" target="_blank">Clique aqui para mais detalhes!</a></p>
-        </div>
-        <div class="projeto-card">
-          <h3>Projeto 2</h3>
-          <p>Este projeto foi um design para um site informativo sobre minha banda favorita, Arctic Monkeys.</p>
-          <p><a href="https://arthurmonsores13.github.io/Site-Banda/" target="_blank">Clique aqui para mais detalhes!</a></p>
-        </div>
-        <div class="projeto-card">
-          <h3>Projeto 3</h3>
-          <p>Este projeto foi um design para um protótipo de uma clínica médica.</p>
-          <p><a href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/" target="_blank">Clique aqui para mais detalhes!</a></p>
+    <section id="projetos" class="section">
+      <div class="container">
+        <h2>Meus Projetos</h2>
+        <div class="projetos-grid">
+          <div class="projeto-card">
+            <h3>Projeto 1</h3>
+            <p>
+              Este projeto foi um design para um site informativo sobre meu
+              anime favorito "Solo Leveling"
+            </p>
+            <p>
+              <a
+                href="https://arthurmonsores13.github.io/SoloLeveling/"
+                target="_blank"
+                >Clique aqui para mais detalhes!</a
+              >
+            </p>
+          </div>
+          <div class="projeto-card">
+            <h3>Projeto 2</h3>
+            <p>
+              Este projeto foi um design para um site informativo sobre minha
+              banda favorita, Arctic Monkeys.
+            </p>
+            <p>
+              <a
+                href="https://arthurmonsores13.github.io/Site-Banda/"
+                target="_blank"
+                >Clique aqui para mais detalhes!</a
+              >
+            </p>
+          </div>
+          <div class="projeto-card">
+            <h3>Projeto 3</h3>
+            <p>
+              Este projeto foi um design para um protótipo de uma clínica
+              médica.
+            </p>
+            <p>
+              <a
+                href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
+                target="_blank"
+                >Clique aqui para mais detalhes!</a
+              >
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="contato" class="section">
-    <div class="container">
-      <h2>Contato</h2>
-      <form id="contactForm">
-        <input type="text" placeholder="Seu Nome" required>
-        <input type="email" placeholder="Seu Email" required>
-        <textarea placeholder="Sua Mensagem" required></textarea>
-        <button type="submit">Enviar</button>
-      </form>
-    </div>
-  </section>
+    <section id="contato" class="section">
+      <div class="container">
+        <h2>Entre em contato comigo</h2>
+        <h3>Minhas Redes</h3>
 
-  <footer>
-    <p>&copy; 2024 Arthur Monsores. Todos os direitos reservados.</p>
-  </footer>
+        <div class="redes-sociais">
+          <a
+            href="https://www.instagram.com/monsoresarthur/?hl=en"
+            target="_blank"
+          >
+            <img src="/css/instagram.png" alt="Instagram" width="40" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
+            target="_blank"
+          >
+            <img src="/css/linkedin.png" alt="LinkedIn" width="40" />
+          </a>
+          <a href="https://github.com/ArthurMonsores13" target="_blank">
+            <img src="/css/github.png" alt="GitHub" width="40" />
+          </a>
+        </div>
+      </div>
+    </section>
 
-  <script src="./js/script.js"></script>
-</body>
+    <footer>
+      <p>&copy; 2024 Arthur Monsores. Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
