--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
             href="https://www.instagram.com/monsoresarthur/?hl=en"
             target="_blank"
           >
-            <img src="/css/instagram.png" alt="Instagram" width="40" />
+            <img src="css/instagram.png" alt="Instagram" width="40" />
           </a>
           <a
             href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
             target="_blank"
           >
-            <img src="/css/linkedin.png" alt="LinkedIn" width="40" />
+            <img src="css/linkedin.png" alt="LinkedIn" width="40" />
           </a>
           <a href="https://github.com/ArthurMonsores13" target="_blank">
-            <img src="/css/github.png" alt="GitHub" width="40" />
+            <img src="css/github.png" alt="GitHub" width="40" />
           </a>
         </div>
       </div>
