--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
     <section id="contato" class="section">
       <div class="container">
         <h2>Entre em contato comigo</h2>
-        <h3>Minhas Redes</h3>
+        <h3>Minhas Redes:</h3>
 
         <div class="redes-sociais">
           <a
             href="https://www.instagram.com/monsoresarthur/?hl=en"
             target="_blank"
           >
-            <img src="css/instagram.png" alt="Instagram" width="40" />
+            <img src="images/instagram.png" alt="Instagram" width="40" />
           </a>
           <a
             href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
             target="_blank"
           >
-            <img src="css/linkedin.png" alt="LinkedIn" width="40" />
+            <img src="images/linkedin.png" alt="LinkedIn" width="40" />
           </a>
           <a href="https://github.com/ArthurMonsores13" target="_blank">
-            <img src="css/github.png" alt="GitHub" width="40" />
+            <img src="images/github.png" alt="GitHub" width="40" />
           </a>
         </div>
       </div>
