--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfólio</title>
+    <title>Arthur Monsores | Desenvolvedor de Software</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -20,57 +24,54 @@
 
     <section id="sobre" class="section">
       <div class="container">
-        <p>Sobre Mim</p>
+        <h2>Sobre Mim</h2>
         <p>
-          Olá! Sou Arthur Monsores, desenvolvedor web começando na área agora.
-          Bem-vindo ao meu portfólio!
+          Olá! Sou Arthur Monsores, desenvolvedor de software, cursando
+          Engenharia de Software na Universidade de Vassouras. Seja bem-vindo ao
+          meu portfólio!
         </p>
+        <img
+          class="foto"
+          src="images/foto.jpeg"
+          alt="Foto de Arthur Monsores"
+        />
       </div>
     </section>
 
     <section id="projetos" class="section">
       <div class="container">
-        <h2>Meus Projetos</h2>
+        <h2>Meus Projetos Principais</h2>
         <div class="projetos-grid">
           <div class="projeto-card">
-            <h3>Projeto 1</h3>
-            <p>
-              Este projeto foi um design para um site informativo sobre meu
-              anime favorito "Solo Leveling"
-            </p>
+            <h3>Design anime</h3>
+            <p>Trabalho sobre meu anime favorito, "Solo Leveling".</p>
             <p>
               <a
                 href="https://arthurmonsores13.github.io/SoloLeveling/"
                 target="_blank"
-                >Clique aqui para mais detalhes!</a
+                >Ver detalhes</a
               >
             </p>
           </div>
           <div class="projeto-card">
-            <h3>Projeto 2</h3>
-            <p>
-              Este projeto foi um design para um site informativo sobre minha
-              banda favorita, Arctic Monkeys.
-            </p>
+            <h3>Arctic Monkey Website</h3>
+            <p>Um site sobre minha banda favorita, Arctic Monkeys.</p>
             <p>
               <a
                 href="https://arthurmonsores13.github.io/Site-Banda/"
                 target="_blank"
-                >Clique aqui para mais detalhes!</a
+                >Ver detalhes</a
               >
             </p>
           </div>
           <div class="projeto-card">
-            <h3>Projeto 3</h3>
-            <p>
-              Este projeto foi um design para um protótipo de uma clínica
-              médica.
-            </p>
+            <h3>Medical clinic</h3>
+            <p>Um protótipo de site para uma clínica médica.</p>
             <p>
               <a
                 href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
                 target="_blank"
-                >Clique aqui para mais detalhes!</a
+                >Ver detalhes</a
               >
             </p>
           </div>
@@ -80,26 +81,39 @@
 
     <section id="contato" class="section">
       <div class="container">
-        <h2>Entre em contato comigo</h2>
-        <h3>Minhas Redes:</h3>
-
+        <h2>Entre em Contato</h2>
+        <h3>Minhas Redes</h3>
         <div class="redes-sociais">
           <a
             href="https://www.instagram.com/monsoresarthur/?hl=en"
             target="_blank"
           >
-            <img src="images/instagram.png" alt="Instagram" width="40" />
+            <img
+              src="images/instagram.png"
+              alt="Instagram de Arthur Monsores"
+              width="40"
+            />
           </a>
           <a
             href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
             target="_blank"
           >
-            <img src="images/linkedin.png" alt="LinkedIn" width="40" />
+            <img
+              src="images/linkedin.png"
+              alt="LinkedIn de Arthur Monsores"
+              width="40"
+            />
           </a>
           <a href="https://github.com/ArthurMonsores13" target="_blank">
-            <img src="images/github.png" alt="GitHub" width="40" />
+            <img
+              src="images/github.png"
+              alt="GitHub de Arthur Monsores"
+              width="40"
+            />
           </a>
         </div>
+         </div>
+    
       </div>
     </section>
 
