--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
               width="40"
             />
           </a>
+          <a href="css/curriculoAM.pdf" target="blank">
+            <img src="images/82497.png" title="Meu Curriculo"/>
+            
+          </a>
         </div>
          </div>
     
