--- a/index.html
+++ b/index.html
@@ -4,125 +4,242 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arthur Monsores | Desenvolvedor de Software</title>
+
+    <!-- Fontes existentes mantidas -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <h1>Meu Portfólio</h1>
-        <ul>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#projetos">Projetos</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
+    <header class="sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark custom-header">
+        <div class="container">
+          <a class="navbar-brand custom-brand" href="#sobre">Meu Portfólio</a>
+
+          <!-- Botão mobile -->
+          <button
+            class="navbar-toggler border-0"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- Menu -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link custom-nav-link" href="#sobre">Sobre</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link custom-nav-link" href="#projetos"
+                  >Projetos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link custom-nav-link" href="#contato">Contato</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
-    <section id="sobre" class="section">
+    <!-- Seção Sobre mantendo seu design -->
+    <section id="sobre" class="custom-section">
       <div class="container">
-        <h2>Sobre Mim</h2>
-        <p>
-          Olá! Sou Arthur Monsores, desenvolvedor de software, cursando
-          Engenharia de Software na Universidade de Vassouras. Seja bem-vindo ao
-          meu portfólio!
+        <div class="row justify-content-center">
+          <div class="col-12 text-center">
+            <h2 class="custom-title">Sobre Mim</h2>
+            <div class="row align-items-center justify-content-center">
+              <div class="col-lg-8 col-md-10">
+                <p class="custom-description">
+                  Olá! Sou Arthur Monsores, desenvolvedor de software, cursando
+                  Engenharia de Software na Universidade de Vassouras. Seja
+                  bem-vindo ao meu portfólio!
+                </p>
+              </div>
+            </div>
+            <div class="mt-4">
+              <img
+                class="custom-foto"
+                src="images/foto.jpeg"
+                alt="Foto de Arthur Monsores"
+              />
+            </div>
+
+            <div class="mt-4">
+              <span class="badge custom-badge me-2 mb-2">JavaScript</span>
+              <span class="badge custom-badge me-2 mb-2">HTML/CSS</span>
+              <span class="badge custom-badge me-2 mb-2">Bootstrap</span>
+              <span class="badge custom-badge me-2 mb-2">Git/GitHub</span>
+              <span class="badge custom-badge me-2 mb-2"
+                >Engenharia de Software</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projetos" class="custom-section">
+      <div class="container">
+        <h2 class="custom-title">Meus Projetos Principais</h2>
+
+        <div class="row g-4">
+          <!-- Projeto 1 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="custom-projeto-card h-100">
+              <div class="d-flex align-items-center mb-3">
+                <i
+                  class="bi bi-palette-fill text-primary fs-3 me-3"
+                  style="color: #0000ff !important"
+                ></i>
+                <h3 class="custom-card-title mb-0">Design anime</h3>
+              </div>
+              <p class="custom-card-text">
+                Trabalho sobre meu anime favorito, "Solo Leveling". Design
+                moderno e responsivo com animações fluidas.
+              </p>
+              <div class="mt-auto">
+                <a
+                  href="https://arthurmonsores13.github.io/SoloLeveling/"
+                  target="_blank"
+                  class="custom-link"
+                >
+                  <i class="bi bi-eye me-2"></i>Ver detalhes
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Projeto 2 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="custom-projeto-card h-100">
+              <div class="d-flex align-items-center mb-3">
+                <i
+                  class="bi bi-music-note-beamed fs-3 me-3"
+                  style="color: #0000ff !important"
+                ></i>
+                <h3 class="custom-card-title mb-0">Arctic Monkey Website</h3>
+              </div>
+              <p class="custom-card-text">
+                Um site sobre minha banda favorita, Arctic Monkeys. Interface
+                interativa com player de música.
+              </p>
+              <div class="mt-auto">
+                <a
+                  href="https://arthurmonsores13.github.io/Site-Banda/"
+                  target="_blank"
+                  class="custom-link"
+                >
+                  <i class="bi bi-eye me-2"></i>Ver detalhes
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Projeto 3 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="custom-projeto-card h-100">
+              <div class="d-flex align-items-center mb-3">
+                <i
+                  class="bi bi-hospital fs-3 me-3"
+                  style="color: #0000ff !important"
+                ></i>
+                <h3 class="custom-card-title mb-0">Medical clinic</h3>
+              </div>
+              <p class="custom-card-text">
+                Um protótipo de site para uma clínica médica. Foco em
+                usabilidade e acessibilidade para pacientes.
+              </p>
+              <div class="mt-auto">
+                <a
+                  href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
+                  target="_blank"
+                  class="custom-link"
+                >
+                  <i class="bi bi-eye me-2"></i>Ver detalhes
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Seção Contato -->
+    <section id="contato" class="custom-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <section class="col-lg-8 text-center">
+            <h2 class="custom-title">Entre em Contato</h2>
+            <h3 class="custom-subtitle">Minhas Redes</h3>
+
+            <!-- Redes sociais com Bootstrap mas mantendo seu estilo -->
+            <div
+              class="d-flex justify-content-center gap-4 flex-wrap custom-redes-sociais"
+            >
+              <a
+                href="https://www.instagram.com/monsoresarthur/?hl=en"
+                target="_blank"
+                class="custom-social-link"
+                title="Instagram"
+              >
+                <i class="bi bi-instagram fs-2"></i>
+              </a>
+
+              <a
+                href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
+                target="_blank"
+                class="custom-social-link"
+                title="LinkedIn"
+              >
+                <i class="bi bi-linkedin fs-2"></i>
+              </a>
+
+              <a
+                href="https://github.com/ArthurMonsores13"
+                target="_blank"
+                class="custom-social-link"
+                title="GitHub"
+              >
+                <i class="bi bi-github fs-2"></i>
+              </a>
+
+              <a
+                href="css/curriculoAM.pdf"
+                target="_blank"
+                class="custom-social-link"
+                title="Meu Currículo"
+              >
+                <i class="bi bi-file-earmark-person fs-2"></i>
+              </a>
+            </div>
+
+          </section>
+
+    <!-- Footer -->
+    <footer class="custom-footer text-center">
+      <div class="container">
+        <p class="mb-0">
+          &copy; 2024 Arthur Monsores. Todos os direitos reservados.
         </p>
-        <img
-          class="foto"
-          src="images/foto.jpeg"
-          alt="Foto de Arthur Monsores"
-        />
       </div>
-    </section>
-
-    <section id="projetos" class="section">
-      <div class="container">
-        <h2>Meus Projetos Principais</h2>
-        <div class="projetos-grid">
-          <div class="projeto-card">
-            <h3>Design anime</h3>
-            <p>Trabalho sobre meu anime favorito, "Solo Leveling".</p>
-            <p>
-              <a
-                href="https://arthurmonsores13.github.io/SoloLeveling/"
-                target="_blank"
-                >Ver detalhes</a
-              >
-            </p>
-          </div>
-          <div class="projeto-card">
-            <h3>Arctic Monkey Website</h3>
-            <p>Um site sobre minha banda favorita, Arctic Monkeys.</p>
-            <p>
-              <a
-                href="https://arthurmonsores13.github.io/Site-Banda/"
-                target="_blank"
-                >Ver detalhes</a
-              >
-            </p>
-          </div>
-          <div class="projeto-card">
-            <h3>Medical clinic</h3>
-            <p>Um protótipo de site para uma clínica médica.</p>
-            <p>
-              <a
-                href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
-                target="_blank"
-                >Ver detalhes</a
-              >
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contato" class="section">
-      <div class="container">
-        <h2>Entre em Contato</h2>
-        <h3>Minhas Redes</h3>
-        <div class="redes-sociais">
-          <a
-            href="https://www.instagram.com/monsoresarthur/?hl=en"
-            target="_blank"
-          >
-            <img
-              src="images/instagram.png"
-              alt="Instagram de Arthur Monsores"
-              width="40"
-            />
-          </a>
-          <a
-            href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
-            target="_blank"
-          >
-            <img
-              src="images/linkedin.png"
-              alt="LinkedIn de Arthur Monsores"
-              width="40"
-            />
-          </a>
-          <a href="https://github.com/ArthurMonsores13" target="_blank">
-            <img
-              src="images/github.png"
-              alt="GitHub de Arthur Monsores"
-              width="40"
-            />
-          </a>
-          <a href="css/curriculoAM.pdf" target="blank">
-            <img src="images/82497.png" title="Meu Curriculo"/>
-            
-          </a>
-        </div>
-         </div>
-    
-      </div>
-    </section>
-
-    <footer>
-      <p>&copy; 2024 Arthur Monsores. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
