--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arthur Monsores | Desenvolvedor de Software</title>
 
-    <!-- Fontes existentes mantidas -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-
-    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +17,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -28,8 +24,6 @@
       <nav class="navbar navbar-expand-lg navbar-dark custom-header">
         <div class="container">
           <a class="navbar-brand custom-brand" href="#sobre">Meu Portfólio</a>
-
-          <!-- Botão mobile -->
           <button
             class="navbar-toggler border-0"
             type="button"
@@ -38,8 +32,6 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-
-          <!-- Menu -->
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
@@ -59,7 +51,6 @@
       </nav>
     </header>
 
-    <!-- Seção Sobre mantendo seu design -->
     <section id="sobre" class="custom-section">
       <div class="container">
         <div class="row justify-content-center">
@@ -81,7 +72,6 @@
                 alt="Foto de Arthur Monsores"
               />
             </div>
-
             <div class="mt-4">
               <span class="badge custom-badge me-2 mb-2">JavaScript</span>
               <span class="badge custom-badge me-2 mb-2">HTML/CSS</span>
@@ -99,9 +89,7 @@
     <section id="projetos" class="custom-section">
       <div class="container">
         <h2 class="custom-title">Meus Projetos Principais</h2>
-
         <div class="row g-4">
-          <!-- Projeto 1 -->
           <div class="col-lg-4 col-md-6">
             <div class="custom-projeto-card h-100">
               <div class="d-flex align-items-center mb-3">
@@ -127,7 +115,6 @@
             </div>
           </div>
 
-          <!-- Projeto 2 -->
           <div class="col-lg-4 col-md-6">
             <div class="custom-projeto-card h-100">
               <div class="d-flex align-items-center mb-3">
@@ -153,7 +140,6 @@
             </div>
           </div>
 
-          <!-- Projeto 3 -->
           <div class="col-lg-4 col-md-6">
             <div class="custom-projeto-card h-100">
               <div class="d-flex align-items-center mb-3">
@@ -182,15 +168,12 @@
       </div>
     </section>
 
-    <!-- Seção Contato -->
     <section id="contato" class="custom-section">
       <div class="container">
         <div class="row justify-content-center">
           <section class="col-lg-8 text-center">
             <h2 class="custom-title">Entre em Contato</h2>
             <h3 class="custom-subtitle">Minhas Redes</h3>
-
-            <!-- Redes sociais com Bootstrap mas mantendo seu estilo -->
             <div
               class="d-flex justify-content-center gap-4 flex-wrap custom-redes-sociais"
             >
@@ -202,7 +185,6 @@
               >
                 <i class="bi bi-instagram fs-2"></i>
               </a>
-
               <a
                 href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
                 target="_blank"
@@ -211,7 +193,6 @@
               >
                 <i class="bi bi-linkedin fs-2"></i>
               </a>
-
               <a
                 href="https://github.com/ArthurMonsores13"
                 target="_blank"
@@ -220,7 +201,6 @@
               >
                 <i class="bi bi-github fs-2"></i>
               </a>
-
               <a
                 href="css/curriculoAM.pdf"
                 target="_blank"
@@ -230,10 +210,11 @@
                 <i class="bi bi-file-earmark-person fs-2"></i>
               </a>
             </div>
-
           </section>
+        </div>
+      </div>
+    </section>
 
-    <!-- Footer -->
     <footer class="custom-footer text-center">
       <div class="container">
         <p class="mb-0">
