--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arthur Monsores | Desenvolvedor de Software</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Arthur Monsores | Software Developer</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
@@ -17,13 +17,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-expand-lg navbar-dark custom-header">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <a class="navbar-brand custom-brand" href="#sobre">Meu Portfólio</a>
+          <a class="navbar-brand custom-brand" href="#sobre">Portfólio Monsores</a>
           <button
             class="navbar-toggler border-0"
             type="button"
@@ -35,15 +35,15 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link custom-nav-link" href="#sobre">Sobre</a>
+                <a class="nav-link custom-nav-link" href="#sobre">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link custom-nav-link" href="#projetos"
-                  >Projetos</a
+                  >Projects</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link custom-nav-link" href="#contato">Contato</a>
+                <a class="nav-link custom-nav-link" href="#contato">Contact</a>
               </li>
             </ul>
           </div>
@@ -51,165 +51,155 @@
       </nav>
     </header>
 
-    <section id="sobre" class="custom-section">
+    <!-- Sobre -->
+    <section id="sobre" class="sobree">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-12 text-center">
-            <h2 class="custom-title">Sobre Mim</h2>
-            <div class="row align-items-center justify-content-center">
-              <div class="col-lg-8 col-md-10">
-                <p class="custom-description">
-                  Olá! Sou Arthur Monsores, desenvolvedor de software, cursando
-                  Engenharia de Software na Universidade de Vassouras. Seja
-                  bem-vindo ao meu portfólio!
-                </p>
-              </div>
-            </div>
-            <div class="mt-4">
-              <img
-                class="custom-foto"
-                src="images/foto.jpeg"
-                alt="Foto de Arthur Monsores"
-              />
-            </div>
-            <div class="mt-4">
-              <span class="badge custom-badge me-2 mb-2">JavaScript</span>
-              <span class="badge custom-badge me-2 mb-2">HTML/CSS</span>
-              <span class="badge custom-badge me-2 mb-2">Bootstrap</span>
-              <span class="badge custom-badge me-2 mb-2">Git/GitHub</span>
-              <span class="badge custom-badge me-2 mb-2"
-                >Engenharia de Software</span
-              >
-            </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-6 col-md-6 text-center text-lg-start">
+            <h2 class="custom-title">Arthur Monsores</h2>
+            <p class="custom-description">
+              Software Developer,undergraduate in software engineering at the
+              Univerdade de Vassouras.
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-6 text-center">
+            <img
+              class="custom-foto"
+              src="assets/images/foto.jpeg"
+              alt="Foto de Arthur Monsores"
+            />
           </div>
         </div>
       </div>
     </section>
 
-    <section id="projetos" class="custom-section">
+    <section id="descricao" class="description">
       <div class="container">
-        <h2 class="custom-title">Meus Projetos Principais</h2>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-6 col-md-6 text-center text-lg-start">
+            <div class="custom-title">About Me</div>
+            <p class="custom-description">
+              Hello! I'm Arthur Monsores, I love technology and creating new
+              things. I'm starting in this world with the goal of joining a big
+              company and helping to create new technologies and development.
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-6 text-center">
+            <img
+              class="custom-foto"
+              src="assets/images/selfie.jpg"
+              alt="Foto de Arthur Monsores"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Projetos -->
+    <section id="projetos" class="projects">
+      <div class="container">
+        <h2 class="custom-title">Main Projects</h2>
         <div class="row g-4">
           <div class="col-lg-4 col-md-6">
-            <div class="custom-projeto-card h-100">
-              <div class="d-flex align-items-center mb-3">
-                <i
-                  class="bi bi-palette-fill text-primary fs-3 me-3"
-                  style="color: #0000ff !important"
-                ></i>
-                <h3 class="custom-card-title mb-0">Design anime</h3>
-              </div>
-              <p class="custom-card-text">
-                Trabalho sobre meu anime favorito, "Solo Leveling". Design
-                moderno e responsivo com animações fluidas.
-              </p>
-              <div class="mt-auto">
-                <a
-                  href="https://arthurmonsores13.github.io/SoloLeveling/"
-                  target="_blank"
-                  class="custom-link"
-                >
-                  <i class="bi bi-eye me-2"></i>Ver detalhes
-                </a>
-              </div>
-            </div>
+            <a
+              href="https://arthurmonsores13.github.io/SoloLeveling/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Design anime - Solo Leveling"
+            >
+              <img
+                src="assets/images/leveling.jpg"
+                alt="Design anime Solo Leveling"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Design anime - Solo Leveling</div>
+            </a>
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="custom-projeto-card h-100">
-              <div class="d-flex align-items-center mb-3">
-                <i
-                  class="bi bi-music-note-beamed fs-3 me-3"
-                  style="color: #0000ff !important"
-                ></i>
-                <h3 class="custom-card-title mb-0">Arctic Monkey Website</h3>
-              </div>
-              <p class="custom-card-text">
-                Um site sobre minha banda favorita, Arctic Monkeys. Interface
-                interativa com player de música.
-              </p>
-              <div class="mt-auto">
-                <a
-                  href="https://arthurmonsores13.github.io/Site-Banda/"
-                  target="_blank"
-                  class="custom-link"
-                >
-                  <i class="bi bi-eye me-2"></i>Ver detalhes
-                </a>
-              </div>
-            </div>
+            <a
+              href="https://arthurmonsores13.github.io/Site-Banda/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Arctic Monkey Website"
+            >
+              <img
+                src="assets/images/banda.jpg"
+                alt="Arctic Monkey Website"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Arctic Monkey Website</div>
+            </a>
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="custom-projeto-card h-100">
-              <div class="d-flex align-items-center mb-3">
-                <i
-                  class="bi bi-hospital fs-3 me-3"
-                  style="color: #0000ff !important"
-                ></i>
-                <h3 class="custom-card-title mb-0">Medical clinic</h3>
-              </div>
-              <p class="custom-card-text">
-                Um protótipo de site para uma clínica médica. Foco em
-                usabilidade e acessibilidade para pacientes.
-              </p>
-              <div class="mt-auto">
-                <a
-                  href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
-                  target="_blank"
-                  class="custom-link"
-                >
-                  <i class="bi bi-eye me-2"></i>Ver detalhes
-                </a>
-              </div>
-            </div>
+            <a
+              href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Medical clinic"
+            >
+              <img
+                src="assets/images/clinic.jpg"
+                alt="Medical clinic"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Medical clinic</div>
+            </a>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contato" class="custom-section">
+    <!-- Contato -->
+    <section id="contato">
       <div class="container">
-        <div class="row justify-content-center">
-          <section class="col-lg-8 text-center">
-            <h2 class="custom-title">Entre em Contato</h2>
-            <h3 class="custom-subtitle">Minhas Redes</h3>
-            <div
-              class="d-flex justify-content-center gap-4 flex-wrap custom-redes-sociais"
-            >
-              <a
-                href="https://www.instagram.com/monsoresarthur/?hl=en"
-                target="_blank"
-                class="custom-social-link"
-                title="Instagram"
-              >
-                <i class="bi bi-instagram fs-2"></i>
-              </a>
-              <a
-                href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
-                target="_blank"
-                class="custom-social-link"
-                title="LinkedIn"
-              >
-                <i class="bi bi-linkedin fs-2"></i>
-              </a>
+            <h2 class="custom-title">Contact</h2>
+<div class="card-contact">
+  <p> Instagram:</p>
+                    <a
+                    href="https://www.instagram.com/monsoresarthur/?hl=en"
+                    target="_blank"
+                    class="custom-social-link"
+                    title="Instagram"
+                    aria-label="Instagram"
+                  >
+                    <i class="bi bi-instagram fs-2"></i>
+                  </a>
+<p>Linkedin:</p>
+<a
+                    href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
+                    target="_blank"
+                    class="custom-social-link"
+                    title="LinkedIn"
+                    aria-label="LinkedIn"
+                  >
+                    <i class="bi bi-linkedin fs-2"></i>
+                  </a>
+<p> GitHub:</p>
+
               <a
                 href="https://github.com/ArthurMonsores13"
                 target="_blank"
                 class="custom-social-link"
                 title="GitHub"
+                aria-label="GitHub"
               >
                 <i class="bi bi-github fs-2"></i>
               </a>
+              <p>Curriculo:</p>
               <a
                 href="css/curriculoAM.pdf"
                 target="_blank"
                 class="custom-social-link"
                 title="Meu Currículo"
+                aria-label="Meu Currículo"
               >
                 <i class="bi bi-file-earmark-person fs-2"></i>
               </a>
-            </div>
+
+</div>
+                    
           </section>
         </div>
       </div>
@@ -218,9 +208,12 @@
     <footer class="custom-footer text-center">
       <div class="container">
         <p class="mb-0">
-          &copy; 2024 Arthur Monsores. Todos os direitos reservados.
+          &copy; 2024 Arthur Monsores.
         </p>
       </div>
-    </footer>
+    </footer> 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
