--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
 
     <!-- Contato -->
     <section id="contato">
-      <div class="container">
-            <h2 class="custom-title">Contact</h2>
+                      <h2 class="custom-title">Contact</h2>
+<div class="container-cards"> 
 <div class="card-contact">
+
   <p> Instagram:</p>
                     <a
                     href="https://www.instagram.com/monsoresarthur/?hl=en"
@@ -198,6 +199,7 @@
                 <i class="bi bi-file-earmark-person fs-2"></i>
               </a>
 
+</div>
 </div>
                     
           </section>
