--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               </a>
               <p>Curriculo:</p>
               <a
-                href="assets/css/novocurriculo.pdf"
+                href="assets/css/novcurriculo.pdf"
                 target="_blank"
                 class="custom-social-link"
                 title="Meu Currículo"
