changing img and add projects

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
                 <a class="nav-link custom-nav-link" href="#sobre">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link custom-nav-link" href="#projetos"
-                  >Projects</a
-                >
+                <a class="nav-link custom-nav-link" href="#projetos">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link custom-nav-link" href="#contato">Contact</a>
@@ -58,8 +56,8 @@
           <div class="col-lg-6 col-md-6 text-center text-lg-start">
             <h2 class="custom-title">Arthur Monsores</h2>
             <p class="custom-description">
-              Software Developer,undergraduate in software engineering at the
-              Univerdade de Vassouras.
+              Software Developer, undergraduate in Software Engineering at the
+              Universidade de Vassouras.
             </p>
           </div>
           <div class="col-lg-6 col-md-6 text-center">
@@ -95,130 +93,162 @@
       </div>
     </section>
 
-<!-- Projetos -->
-<section id="projetos" class="projects">
-  <div class="container">
-    <h2 class="custom-title">Main Projects</h2>
-    <div class="row g-4">
-      <div class="col-lg-4 col-md-6">
-        <a href="https://arthurmonsores13.github.io/SoloLeveling/"
-           target="_blank"
-           class="custom-projeto-card"
-           title="Design anime - Solo Leveling">
-          <img src="assets/images/leveling.jpg"
-               alt="Design anime Solo Leveling"
-               class="custom-projeto-img">
-          <div class="overlay-text">Design anime - Solo Leveling</div>
-        </a>
-      </div>
+    <!-- Projetos -->
+    <section id="projetos" class="projects">
+      <div class="container">
+        <h2 class="custom-title">Main Projects</h2>
 
-      <div class="col-lg-4 col-md-6">
-        <a href="https://arthurmonsores13.github.io/Site-Banda/"
-           target="_blank"
-           class="custom-projeto-card"
-           title="Arctic Monkey Website">
-          <img src="assets/images/banda.jpg"
-               alt="Arctic Monkey Website"
-               class="custom-projeto-img">
-          <div class="overlay-text">Arctic Monkey Website</div>
-        </a>
-      </div>
+        <!-- Primeira linha de projetos -->
+        <div class="row g-4 mb-4">
+          <div class="col-lg-4 col-md-6">
+            <a
+              href="https://arthurmonsores13.github.io/SoloLeveling/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Design anime - Solo Leveling"
+            >
+              <img
+                src="assets/images/leveling.jpg"
+                alt="Design anime Solo Leveling"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Design anime - Solo Leveling</div>
+            </a>
+          </div>
 
-      <div class="col-lg-4 col-md-6">
-        <a href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
-           target="_blank"
-           class="custom-projeto-card"
-           title="Medical clinic">
-          <img src="assets/images/clinic.jpg"
-               alt="Medical clinic"
-               class="custom-projeto-img">
-          <div class="overlay-text">Medical clinic</div>
-        </a>
-      </div>
-    </div>
+          <div class="col-lg-4 col-md-6">
+            <a
+              href="https://arthurmonsores13.github.io/Site-Banda/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Arctic Monkey Website"
+            >
+              <img
+                src="assets/images/banda.jpg"
+                alt="Arctic Monkey Website"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Arctic Monkey Website</div>
+            </a>
+          </div>
 
-    <h2 class="custom-title mt-5">Projects</h2>
-    <div class="row g-4">
-      <div class="col-lg-4 col-md-6">
-        <a href="https://site-medico-geriatra.vercel.app/"
-           target="_blank"
-           class="custom-projeto-card"
-           title="Clinic Website">
-          <img src="assets/images/siteclinic.jpg"
-               alt="Clinic Website"
-               class="custom-projeto-img">
-          <div class="overlay-text">Clinic Website</div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <a href="https://arthurmonsores13.github.io/Conversor/"
-           target="_blank"
-           class="custom-projeto-card"
-           title="Conversor">
-          <img src="assets/images/conversor.jpg"
-               alt="Coversor"
-               class="custom-projeto-img">
-          <div class="overlay-text">Conversor</div>
-        </a>
-      </div>
+          <div class="col-lg-4 col-md-6">
+            <a
+              href="https://arthurmonsores13.github.io/Documenta-o-SQL/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="SQL Documentation"
+            >
+              <img
+                src="assets/images/foto_doc.jpeg"
+                alt="SQL Documentation"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">SQL Documentation</div>
+            </a>
+          </div>
+        </div>
 
-    </div>
-  </div>
-</section>
+        <!-- Segunda linha de projetos -->
+        <h2 class="custom-title mt-4">Projects</h2>
+        <div class="row g-4">
+          <div class="col-lg-4 col-md-6">
+            <a
+              href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Medical clinic"
+            >
+              <img
+                src="assets/images/clinic.jpg"
+                alt="Medical clinic"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Medical clinic</div>
+            </a>
+          </div>
 
+          <div class="col-lg-4 col-md-6">
+            <a
+              href="https://arthurmonsores13.github.io/Conversor/"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Conversor"
+            >
+              <img
+                src="assets/images/conversor.jpg"
+                alt="Conversor"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Conversor</div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <a
+              href="https://github.com/ArthurMonsores13/Flappy-Bird-Game-Java"
+              target="_blank"
+              class="custom-projeto-card"
+              title="Flappy Bird Game Java"
+            >
+              <img
+                src="assets/images/flappy.jpg"
+                alt="Calculator"
+                class="custom-projeto-img"
+              />
+              <div class="overlay-text">Flappy-Bird-Game-Java</div>
+            </a>
+        </div>
+      </div>
+    </section>
 
     <!-- Contato -->
     <section id="contato">
-                      <h2 class="custom-title">Contact</h2>
-<div class="container-cards"> 
-<div class="card-contact">
+      <h2 class="custom-title">Contact</h2>
+      <div class="container-cards">
+        <div class="card-contact">
+          <p>Instagram:</p>
+          <a
+            href="https://www.instagram.com/monsoresarthur/?hl=en"
+            target="_blank"
+            class="custom-social-link"
+            title="Instagram"
+            aria-label="Instagram"
+          >
+            <i class="bi bi-instagram fs-2"></i>
+          </a>
 
-  <p> Instagram:</p>
-                    <a
-                    href="https://www.instagram.com/monsoresarthur/?hl=en"
-                    target="_blank"
-                    class="custom-social-link"
-                    title="Instagram"
-                    aria-label="Instagram"
-                  >
-                    <i class="bi bi-instagram fs-2"></i>
-                  </a>
-<p>Linkedin:</p>
-<a
-                    href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
-                    target="_blank"
-                    class="custom-social-link"
-                    title="LinkedIn"
-                    aria-label="LinkedIn"
-                  >
-                    <i class="bi bi-linkedin fs-2"></i>
-                  </a>
-<p> GitHub:</p>
+          <p>LinkedIn:</p>
+          <a
+            href="https://www.linkedin.com/in/arthur-monsores-5883061a1/"
+            target="_blank"
+            class="custom-social-link"
+            title="LinkedIn"
+            aria-label="LinkedIn"
+          >
+            <i class="bi bi-linkedin fs-2"></i>
+          </a>
 
-              <a
-                href="https://github.com/ArthurMonsores13"
-                target="_blank"
-                class="custom-social-link"
-                title="GitHub"
-                aria-label="GitHub"
-              >
-                <i class="bi bi-github fs-2"></i>
-              </a>
-              <p>Curriculo:</p>
-              <a
-                href="assets/css/curriculoo.pdf"
-                target="_blank"
-                class="custom-social-link"
-                title="Meu Currículo"
-                aria-label="Meu Currículo"
-              >
-                <i class="bi bi-file-earmark-person fs-2"></i>
-              </a>
+          <p>GitHub:</p>
+          <a
+            href="https://github.com/ArthurMonsores13"
+            target="_blank"
+            class="custom-social-link"
+            title="GitHub"
+            aria-label="GitHub"
+          >
+            <i class="bi bi-github fs-2"></i>
+          </a>
 
-</div>
-</div>
-                    
-          </section>
+          <p>Currículo:</p>
+          <a
+            href="assets/css/curriculoo.pdf"
+            target="_blank"
+            class="custom-social-link"
+            title="Meu Currículo"
+            aria-label="Meu Currículo"
+          >
+            <i class="bi bi-file-earmark-person fs-2"></i>
+          </a>
         </div>
       </div>
     </section>
@@ -229,7 +259,7 @@
           &copy; 2024 Arthur Monsores.
         </p>
       </div>
-    </footer> 
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
