--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <p class="custom-description">
               Hello! I'm Arthur Monsores, I love technology and creating new
               things. I'm starting in this world with the goal of joining a big
-              company and helping to create new technologies and development.
+              company and helping to create new technologies and development.I'm currently focused on databases and SQL (especially PostgreSQL), 
+              and I'm looking for opportunities to grow in data and backend development.
             </p>
           </div>
           <div class="col-lg-6 col-md-6 text-center">
@@ -112,7 +113,7 @@
                 alt="Design anime Solo Leveling"
                 class="custom-projeto-img"
               />
-              <div class="overlay-text">Design anime - Solo Leveling</div>
+              <div class="overlay-text">Interactive anime-themed page showcasing layout design, UI structure, and visual styling.</div>
             </a>
           </div>
 
@@ -128,7 +129,7 @@
                 alt="Arctic Monkey Website"
                 class="custom-projeto-img"
               />
-              <div class="overlay-text">Arctic Monkey Website</div>
+              <div class="overlay-text">Responsive band website featuring sections for albums, members, and media using clean modern UI.</div>
             </a>
           </div>
 
@@ -144,13 +145,14 @@
                 alt="SQL Documentation"
                 class="custom-projeto-img"
               />
-              <div class="overlay-text">SQL Documentation</div>
+              <div class="overlay-text">SQL Documentation
+Complete study of SQL and PostgreSQL with practical examples.</div>
             </a>
           </div>
         </div>
 
         <!-- Segunda linha de projetos -->
-        <h2 class="custom-title mt-4">Projects</h2>
+        <h2 class="custom-title mt-4">Other Projects</h2>
         <div class="row g-4">
           <div class="col-lg-4 col-md-6">
             <a
@@ -164,7 +166,7 @@
                 alt="Medical clinic"
                 class="custom-projeto-img"
               />
-              <div class="overlay-text">Medical clinic</div>
+              <div class="overlay-text">Informational website for a medical clinic with services, scheduling sections, and clean layout.</div>
             </a>
           </div>
 
@@ -180,7 +182,7 @@
                 alt="Conversor"
                 class="custom-projeto-img"
               />
-              <div class="overlay-text">Conversor</div>
+              <div class="overlay-text">Simple and functional web converter for units, built with HTML, CSS, and JavaScript.</div>
             </a>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -195,7 +197,7 @@
                 alt="Calculator"
                 class="custom-projeto-img"
               />
-              <div class="overlay-text">Flappy-Bird-Game-Java</div>
+              <div class="overlay-text">Simple browser game inspired by Flappy Bird, built with JavaScript, collision logic, and responsive controls.</div>
             </a>
         </div>
       </div>
