--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Complete study of SQL and PostgreSQL with practical examples.</div>
 
           <p>Currículo:</p>
           <a
-            href="assets/css/curriculoo.pdf"
+            href="assets/css/curriculoAM.pdf"
             target="_blank"
             class="custom-social-link"
             title="Meu Currículo"
