--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@ Complete study of SQL and PostgreSQL with practical examples.</div>
             >
               <img
                 src="assets/images/flappy.jpg"
-                alt="Calculator"
+                alt="flappy"
                 class="custom-projeto-img"
               />
-              <div class="overlay-text">Simple browser game inspired by Flappy Bird, built with JavaScript, collision logic, and responsive controls.</div>
+              <div class="overlay-text">Simple browser game inspired by Flappy Bird, built with Java, collision logic, and responsive controls.</div>
             </a>
         </div>
       </div>
