--- a/index.html
+++ b/index.html
@@ -94,114 +94,170 @@
       </div>
     </section>
 
-    <!-- Projetos -->
-    <section id="projetos" class="projects">
-      <div class="container">
-        <h2 class="custom-title">Main Projects</h2>
+<!-- Projetos -->
+<section id="projetos" class="projects">
+  <div class="container">
+    <h2 class="custom-title">Main Projects</h2>
 
-        <!-- Primeira linha de projetos -->
-        <div class="row g-4 mb-4">
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/SoloLeveling/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Design anime - Solo Leveling"
-            >
-              <img
-                src="assets/images/leveling.jpg"
-                alt="Design anime Solo Leveling"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Interactive anime-themed page showcasing layout design, UI structure, and visual styling.</div>
-            </a>
+    <div class="row g-4 mb-4">
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://github.com/ArthurMonsores13/Dashboard_Investimentos"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Dashboard Investimentos"
+        >
+          <img
+            src="assets/images/dash.png"
+            alt="Dashboard Investimentos"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Investment dashboard project using PostgreSQL views + Power BI for analytical insights.
           </div>
-
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/Site-Banda/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Arctic Monkey Website"
-            >
-              <img
-                src="assets/images/banda.jpg"
-                alt="Arctic Monkey Website"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Responsive band website featuring sections for albums, members, and media using clean modern UI.</div>
-            </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/Documenta-o-SQL/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="SQL Documentation"
-            >
-              <img
-                src="assets/images/foto_doc.jpeg"
-                alt="SQL Documentation"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">SQL Documentation
-Complete study of SQL and PostgreSQL with practical examples.</div>
-            </a>
-          </div>
-        </div>
-
-        <!-- Segunda linha de projetos -->
-        <h2 class="custom-title mt-4">Other Projects</h2>
-        <div class="row g-4">
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Medical clinic"
-            >
-              <img
-                src="assets/images/clinic.jpg"
-                alt="Medical clinic"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Informational website for a medical clinic with services, scheduling sections, and clean layout.</div>
-            </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://arthurmonsores13.github.io/Conversor/"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Conversor"
-            >
-              <img
-                src="assets/images/conversor.jpg"
-                alt="Conversor"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Simple and functional web converter for units, built with HTML, CSS, and JavaScript.</div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <a
-              href="https://github.com/ArthurMonsores13/Flappy-Bird-Game-Java"
-              target="_blank"
-              class="custom-projeto-card"
-              title="Flappy Bird Game Java"
-            >
-              <img
-                src="assets/images/flappy.jpg"
-                alt="flappy"
-                class="custom-projeto-img"
-              />
-              <div class="overlay-text">Simple browser game inspired by Flappy Bird, built with Java, collision logic, and responsive controls.</div>
-            </a>
-        </div>
+        </a>
       </div>
-    </section>
+
+      <!-- Project Flask Festival -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://github.com/ArthurMonsores13/Project-Flask-Festival"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Flask Festival"
+        >
+          <img
+            src="assets/images/image.png"
+            alt="Flask Festival"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Web app built with Flask showcasing routes, templates, and a clean project structure.
+          </div>
+        </a>
+      </div>
+
+      <!-- SQL Documentation -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://arthurmonsores13.github.io/Documenta-o-SQL/"
+          target="_blank"
+          class="custom-projeto-card"
+          title="SQL Documentation"
+        >
+          <img
+            src="assets/images/foto_doc.jpeg"
+            alt="SQL Documentation"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Complete study of SQL and PostgreSQL with practical examples.
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <!-- Other Projects -->
+    <h2 class="custom-title mt-4">Other Projects</h2>
+    <div class="row g-4">
+      <!-- Solo Leveling -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://arthurmonsores13.github.io/SoloLeveling/"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Design anime - Solo Leveling"
+        >
+          <img
+            src="assets/images/leveling.jpg"
+            alt="Design anime Solo Leveling"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Interactive anime-themed page showcasing layout design, UI structure, and visual styling.
+          </div>
+        </a>
+      </div>
+
+      <!-- Arctic Monkeys -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://arthurmonsores13.github.io/Site-Banda/"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Arctic Monkey Website"
+        >
+          <img
+            src="assets/images/banda.jpg"
+            alt="Arctic Monkey Website"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Responsive band website featuring sections for albums, members, and media using clean modern UI.
+          </div>
+        </a>
+      </div>
+
+      <!-- Medical clinic -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://arthurmonsores13.github.io/Praticas-Extensionistas-Site/"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Medical clinic"
+        >
+          <img
+            src="assets/images/clinic.jpg"
+            alt="Medical clinic"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Informational website for a medical clinic with services, scheduling sections, and clean layout.
+          </div>
+        </a>
+      </div>
+
+      <!-- Conversor -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://arthurmonsores13.github.io/Conversor/"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Conversor"
+        >
+          <img
+            src="assets/images/conversor.jpg"
+            alt="Conversor"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Simple and functional web converter for units, built with HTML, CSS, and JavaScript.
+          </div>
+        </a>
+      </div>
+
+      <!-- Flappy Bird (GitHub) -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://github.com/ArthurMonsores13/Flappy-Bird-Game-Java"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Flappy Bird Game Java"
+        >
+          <img
+            src="assets/images/flappy.jpg"
+            alt="Flappy Bird"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Simple game inspired by Flappy Bird, built with Java, collision logic, and responsive controls.
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Contato -->
     <section id="contato">
