--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
             class="custom-projeto-img"
           />
           <div class="overlay-text">
-            Investment dashboard project using PostgreSQL views + Power BI for analytical insights.
-          </div>
+Investment dashboard built on PostgreSQL analytical views and consumed by Power BI to generate business insights.          </div>
         </a>
       </div>
 
