--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
             <p class="custom-description">
               Hello! I'm Arthur Monsores, I love technology and creating new
               things. I'm starting in this world with the goal of joining a big
-              company and helping to create new technologies and development.I'm currently focused on databases and SQL (especially PostgreSQL), 
-              and I'm looking for opportunities to grow in data and backend development.
+              company and helping to create new technologies and development.Currently, I am focusing my studies on C# and .NET, seeking to 
+              consolidate a solid foundation in programming logic, code organization, and best development practices. I am interested in understanding 
+              how applications work beyond the interface, exploring business rules, structure, and performance.
+
             </p>
           </div>
           <div class="col-lg-6 col-md-6 text-center">
@@ -100,6 +102,12 @@
     <h2 class="custom-title">Main Projects</h2>
 
     <div class="row g-4 mb-4">
+      <div class="row g-4 mb-4">
+        <a href=""></a>
+
+      </div>
+
+
       <div class="col-lg-4 col-md-6">
         <a
           href="https://github.com/ArthurMonsores13/Dashboard_Investimentos"
