--- a/index.html
+++ b/index.html
@@ -102,12 +102,27 @@
     <h2 class="custom-title">Main Projects</h2>
 
     <div class="row g-4 mb-4">
-      <div class="row g-4 mb-4">
-        <a href=""></a>
 
+      <!-- Calculator C# -->
+      <div class="col-lg-4 col-md-6">
+        <a
+          href="https://github.com/ArthurMonsores13/Calculadora-em-CSharp"
+          target="_blank"
+          class="custom-projeto-card"
+          title="Calculator C#"
+        >
+          <img
+            src="assets/images/calc.png"
+            alt="Calculator C#"
+            class="custom-projeto-img"
+          />
+          <div class="overlay-text">
+            Student project built in C# focusing on logic and structure.
+          </div>
+        </a>
       </div>
 
-
+      <!-- Dashboard Investimentos -->
       <div class="col-lg-4 col-md-6">
         <a
           href="https://github.com/ArthurMonsores13/Dashboard_Investimentos"
@@ -121,11 +136,12 @@
             class="custom-projeto-img"
           />
           <div class="overlay-text">
-Investment dashboard built on PostgreSQL analytical views and consumed by Power BI to generate business insights.          </div>
+            Investment dashboard built on PostgreSQL analytical views and consumed by Power BI.
+          </div>
         </a>
       </div>
 
-      <!-- Project Flask Festival -->
+      <!-- Flask Festival -->
       <div class="col-lg-4 col-md-6">
         <a
           href="https://github.com/ArthurMonsores13/Project-Flask-Festival"
@@ -139,7 +155,7 @@ Investment dashboard built on PostgreSQL analytical views and consumed by Power 
             class="custom-projeto-img"
           />
           <div class="overlay-text">
-            Web app built with Flask showcasing routes, templates, and a clean project structure.
+            Web app built with Flask showcasing routes, templates, and clean structure.
           </div>
         </a>
       </div>
@@ -147,7 +163,7 @@ Investment dashboard built on PostgreSQL analytical views and consumed by Power 
       <!-- SQL Documentation -->
       <div class="col-lg-4 col-md-6">
         <a
-          href="https://arthurmonsores13.github.io/Documenta-o-SQL/"
+          href="https://github.com/ArthurMonsores13/Documenta-o-SQL"
           target="_blank"
           class="custom-projeto-card"
           title="SQL Documentation"
@@ -162,11 +178,20 @@ Investment dashboard built on PostgreSQL analytical views and consumed by Power 
           </div>
         </a>
       </div>
-    </div>
 
-    <!-- Other Projects -->
+    </div>
+  </div>
+</section>
+
+
+<!-- Other Projects -->
+<section id="outros-projetos" class="projects">
+  <div class="container">
+
     <h2 class="custom-title mt-4">Other Projects</h2>
+
     <div class="row g-4">
+
       <!-- Solo Leveling -->
       <div class="col-lg-4 col-md-6">
         <a
@@ -200,7 +225,7 @@ Investment dashboard built on PostgreSQL analytical views and consumed by Power 
             class="custom-projeto-img"
           />
           <div class="overlay-text">
-            Responsive band website featuring sections for albums, members, and media using clean modern UI.
+            Responsive band website featuring albums, members, and media with a clean UI.
           </div>
         </a>
       </div>
@@ -219,7 +244,7 @@ Investment dashboard built on PostgreSQL analytical views and consumed by Power 
             class="custom-projeto-img"
           />
           <div class="overlay-text">
-            Informational website for a medical clinic with services, scheduling sections, and clean layout.
+            Informational website for a medical clinic with services and scheduling sections.
           </div>
         </a>
       </div>
@@ -238,12 +263,12 @@ Investment dashboard built on PostgreSQL analytical views and consumed by Power 
             class="custom-projeto-img"
           />
           <div class="overlay-text">
-            Simple and functional web converter for units, built with HTML, CSS, and JavaScript.
+            Simple and functional unit converter built with HTML, CSS, and JavaScript.
           </div>
         </a>
       </div>
 
-      <!-- Flappy Bird (GitHub) -->
+      <!-- Flappy Bird -->
       <div class="col-lg-4 col-md-6">
         <a
           href="https://github.com/ArthurMonsores13/Flappy-Bird-Game-Java"
@@ -257,13 +282,15 @@ Investment dashboard built on PostgreSQL analytical views and consumed by Power 
             class="custom-projeto-img"
           />
           <div class="overlay-text">
-            Simple game inspired by Flappy Bird, built with Java, collision logic, and responsive controls.
+            Java-based game inspired by Flappy Bird with collision logic and responsive controls.
           </div>
         </a>
       </div>
+
     </div>
   </div>
 </section>
+
 
 
     <!-- Contato -->
